--- a/index.html
+++ b/index.html
@@ -152,39 +152,99 @@
             <div class="row " >
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/1.png" alt="Photo 1" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/1.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/1.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/1.png" data-filename="1.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/2.png" alt="Photo 2" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/2.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/2.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/2.png" data-filename="2.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/3.png" alt="Photo 3" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/3.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/3.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/3.png" data-filename="3.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/4.png" alt="Photo 4" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/4.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/4.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/4.png" data-filename="4.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/5.png" alt="Photo 5" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/5.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/5.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/5.png" data-filename="5.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
                 <img src="assets/6.png" alt="Photo 6" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/6.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/6.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/6.png" data-filename="6.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/7.jpg" alt="Photo 6" class="thumb">
+                <img src="assets/7.jpg" alt="Photo 7" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/7.jpg">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/7.jpg">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/7.jpg" data-filename="7.jpg">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/8.png" alt="Photo 6" class="thumb">
+                <img src="assets/8.png" alt="Photo 8" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/8.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/8.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/8.png" data-filename="8.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/9.png" alt="Photo 6" class="thumb">
+                <img src="assets/9.png" alt="Photo 9" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/9.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/9.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/9.png" data-filename="9.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/10.png" alt="Photo 6" class="thumb">
+                <img src="assets/10.png" alt="Photo 10" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/10.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/10.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/10.png" data-filename="10.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/11.png" alt="Photo 6" class="thumb">
+                <img src="assets/11.png" alt="Photo 11" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/11.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/11.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/11.png" data-filename="11.png">Download</button>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 gallery-item">
-                <img src="assets/12.png" alt="Photo 6" class="thumb">
+                <img src="assets/12.png" alt="Photo 12" class="thumb">
+                <div class="actions">
+                    <button type="button" class="btn btn-sm btn-outline-success like-btn" data-src="assets/12.png">👍 <span class="vote-count">0</span></button>
+                    <button type="button" class="btn btn-sm btn-outline-danger dislike-btn" data-src="assets/12.png">👎 <span class="vote-count">0</span></button>
+                </div>
+                <button type="button" class="btn btn-dark download-btn" data-src="assets/12.png" data-filename="12.png">Download</button>
             </div>
             </div>
         </div>
@@ -192,7 +252,170 @@
 
 
 
+    <style>
+        /* Download button styling and positioning */
+        .gallery-item { position: relative; }
+        .gallery-item .download-btn {
+            position: absolute;
+            right: 8px;
+            bottom: 8px;
+            background: rgba(0,0,0,0.7);
+            color: #fff;
+            border: none;
+            padding: 6px 8px;
+            font-size: 0.85rem;
+            border-radius: 4px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .gallery-item .download-btn:hover { background: rgba(0,0,0,0.85); }
+        /* Like/Dislike actions (bottom-left) */
+        .gallery-item .actions {
+            position: absolute;
+            left: 8px;
+            bottom: 8px;
+            display: flex;
+            gap: 6px;
+            align-items: center;
+        }
+        .gallery-item .actions .btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 6px 8px;
+            font-size: 0.85rem;
+        }
+        .vote-count { font-weight: 600; }
+        .active-vote { box-shadow: 0 0 0 2px rgba(255,255,255,0.12) inset; }
+        .like-btn.active-vote { background-color: rgba(40,167,69,0.12); }
+        .dislike-btn.active-vote { background-color: rgba(220,53,69,0.12); }
+    </style>
 
+    <script>
+        // Download handler: fetches the image and triggers a download via blob to ensure filename
+        async function downloadImage(url, filename) {
+            try {
+                const res = await fetch(url);
+                if (!res.ok) throw new Error('Network response was not ok');
+                const blob = await res.blob();
+                const blobUrl = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = blobUrl;
+                a.download = filename || url.split('/').pop();
+                document.body.appendChild(a);
+                a.click();
+                a.remove();
+                URL.revokeObjectURL(blobUrl);
+            } catch (err) {
+                // Fallback: open image in new tab
+                console.error('Download failed, opening image in new tab', err);
+                window.open(url, '_blank');
+            }
+        }
+
+        document.addEventListener('click', (e) => {
+            const btn = e.target.closest('.download-btn');
+            if (!btn) return;
+            const src = btn.getAttribute('data-src');
+            const filename = btn.getAttribute('data-filename');
+            if (src) {
+                downloadImage(src, filename);
+            }
+        });
+    </script>
+
+    <script>
+        // Like/Dislike with toggle behavior and persistence in localStorage
+        const VOTES_PREFIX = 'votes:'; // stores {like,dislike}
+        const USER_VOTES_KEY = 'userVotes'; // stores map src -> 'like'|'dislike'
+
+        function loadVotes(src) {
+            try {
+                const raw = localStorage.getItem(VOTES_PREFIX + src);
+                return raw ? JSON.parse(raw) : { like: 0, dislike: 0 };
+            } catch (e) { return { like: 0, dislike: 0 }; }
+        }
+        function saveVotes(src, votes) {
+            localStorage.setItem(VOTES_PREFIX + src, JSON.stringify(votes));
+        }
+        function loadUserVotes() {
+            try { return JSON.parse(localStorage.getItem(USER_VOTES_KEY) || '{}'); }
+            catch(e){ return {}; }
+        }
+        function saveUserVotes(map) { localStorage.setItem(USER_VOTES_KEY, JSON.stringify(map)); }
+
+        function updateCountsInDOM(src, votes) {
+            const likeBtn = document.querySelector(`.like-btn[data-src="${src}"]`);
+            const dislikeBtn = document.querySelector(`.dislike-btn[data-src="${src}"]`);
+            if (likeBtn) {
+                const span = likeBtn.querySelector('.vote-count');
+                if (span) span.textContent = votes.like;
+            }
+            if (dislikeBtn) {
+                const span = dislikeBtn.querySelector('.vote-count');
+                if (span) span.textContent = votes.dislike;
+            }
+        }
+
+        // Initialize counts from storage
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.like-btn, .dislike-btn').forEach(btn => {
+                const src = btn.getAttribute('data-src');
+                if (!src) return;
+                const votes = loadVotes(src);
+                updateCountsInDOM(src, votes);
+            });
+            // also visually mark user's previous vote
+            const userVotes = loadUserVotes();
+            Object.keys(userVotes).forEach(src => {
+                const type = userVotes[src];
+                if (!type) return;
+                const btn = document.querySelector(`.${type}-btn[data-src="${src}"]`);
+                if (btn) btn.classList.add('active-vote');
+            });
+        });
+
+        // Toggle voting behavior
+        document.addEventListener('click', (e) => {
+            const like = e.target.closest('.like-btn');
+            const dislike = e.target.closest('.dislike-btn');
+            if (!like && !dislike) return;
+            const isLike = !!like;
+            const btn = like || dislike;
+            const src = btn.getAttribute('data-src');
+            if (!src) return;
+
+            const votes = loadVotes(src);
+            const userVotes = loadUserVotes();
+            const prev = userVotes[src] || null;
+            const clickedType = isLike ? 'like' : 'dislike';
+            const otherType = isLike ? 'dislike' : 'like';
+
+            if (prev === clickedType) {
+                // undo
+                votes[clickedType] = Math.max(0, votes[clickedType] - 1);
+                userVotes[src] = null;
+                btn.classList.remove('active-vote');
+            } else {
+                // add this vote
+                votes[clickedType] = (votes[clickedType] || 0) + 1;
+                // remove other if previously voted
+                if (prev === otherType) {
+                    votes[otherType] = Math.max(0, votes[otherType] - 1);
+                    const otherBtn = document.querySelector(`.${otherType}-btn[data-src="${src}"]`);
+                    if (otherBtn) otherBtn.classList.remove('active-vote');
+                }
+                userVotes[src] = clickedType;
+                btn.classList.add('active-vote');
+            }
+
+            saveVotes(src, votes);
+            saveUserVotes(userVotes);
+            updateCountsInDOM(src, votes);
+        });
+    </script>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
